--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 3</title>
   </head>
-  <h1>Titulo prueba</h1>
+  <h1>Titulo prueba 2</h1>
 </html>
